<resources>
    <string name="app_name">Kulevskij_36_group_05</string>
    <string name="log_in">Log in with Google</string>
    <string name="email">email</string>
    <string name="or">OR</string>
    <string name="password">password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_q">Don`t have an account? Sign up</string>
</resources>